--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -22,7 +22,102 @@ knitr::opts_chunk$set(echo = TRUE, fig.width=15, fig.height=10)
 |
 ##  1.1 Sample Data
 |
+| The [<mark style="background-color: #EEEEEE;color: #FF0000">**Oscars**</mark>](https://www.kaggle.com/datasets/unanimad/the-oscar-award), [<mark style="background-color: #EEEEEE;color: #FF0000">**Tomatometer**</mark>](https://www.kaggle.com/datasets/andrezaza/clapper-massive-rotten-tomatoes-movies-and-reviews
+) and , [<mark style="background-color: #EEEEEE;color: #FF0000">**IMDB**</mark>](https://www.kaggle.com/datasets/sankha1998/tmdb-top-10000-popular-movies-dataset
+)  datasets obtained from  <mark style="background-color: #CCECFF">**Kaggle**</mark> package was used for this illustrated example.   
+|
+| Preliminary dataset assessment:
+|
+| **[A]** 40 rows (observations)
+| 
+| **[B]** 6831 columns (variables)
+|      **[B.1]** 1/6831 label = <span style="color: #FF0000">labs</span> variable (factor)
+|             **[B.1.1]** Category 1 = <span style="color: #FF0000">labs=NSCLC</span> 
+|             **[B.1.2]** Category 2 = <span style="color: #FF0000">labs=RENAL</span> 
+|             **[B.1.3]** Category 3 = <span style="color: #FF0000">labs=MELANOMA</span> 
+|             **[B.1.4]** Category 4 = <span style="color: #FF0000">labs=BREAST</span> 
+|             **[B.1.5]** Category 5 = <span style="color: #FF0000">labs=COLON</span> 
+|      **[B.2]** 6830/6831 descriptors = 6830/6830 numeric
+|     
+| 
 ```{r section_1.1, warning=FALSE, message=FALSE}
+##################################
+# Loading R libraries
+##################################
+library(AppliedPredictiveModeling)
+library(caret)
+library(rpart)
+library(lattice)
+library(dplyr)
+library(tidyr)
+library(moments)
+library(skimr)
+library(RANN)
+library(pls)
+library(corrplot)
+library(tidyverse)
+library(lares)
+library(DMwR)
+library(gridExtra)
+library(rattle)
+library(RColorBrewer)
+library(stats)
+
+##################################
+# Loading source and
+# formulating the analysis set
+##################################
+Oscars <- read.csv("Oscars.csv",
+                   na.strings=c("NA","NaN"," ",""),
+                   stringsAsFactors = FALSE)
+Oscars <- as.data.frame(Oscars)
+
+##################################
+# Performing a general exploration of the data set
+##################################
+dim(Oscars)
+str(Oscars)
+summary(Oscars)
+
+##################################
+# Transforming to appropriate data types
+##################################
+Oscars$Year <- factor(Oscars$Year,
+                      levels = c("2010",
+                                 "2011",
+                                 "2012",
+                                 "2013",
+                                 "2014",
+                                 "2015",
+                                 "2016",
+                                 "2017",
+                                 "2018",
+                                 "2019",
+                                 "2020",
+                                 "2021",
+                                 "2022",
+                                 "2023"))
+
+Oscars$Genre          <- as.factor(Oscars$Genre)
+Oscars$Picture        <- as.factor(Oscars$Picture)
+Oscars$Cinematography <- as.factor(Oscars$Cinematography)
+Oscars$Directing      <- as.factor(Oscars$Directing)
+Oscars$Editing        <- as.factor(Oscars$Editing)
+Oscars$Screenplay     <- as.factor(Oscars$Screenplay)
+Oscars$Acting         <- as.factor(Oscars$Acting)
+Oscars$Design         <- as.factor(Oscars$Design)
+Oscars$Sound          <- as.factor(Oscars$Sound)
+
+##################################
+# Formulating a data type assessment summary
+##################################
+PDA <- Oscars
+(PDA.Summary <- data.frame(
+  Column.Index=c(1:length(names(PDA))),
+  Column.Name= names(PDA), 
+  Column.Type=sapply(PDA, function(x) class(x)), 
+  row.names=NULL)
+)
 
 ```
 
