--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -419,7 +419,7 @@ colnames(SD_PCA.Numeric)
 ##################################
 # Performing PCA
 ##################################
-DR_PCA <- PCA(SD_PCA.Numeric,
+DR_PCA <- PCA(SD_PCA[,c(1:6)],
               scale.unit = TRUE,
               graph = FALSE)
 
@@ -431,12 +431,12 @@ DR_PCA <- PCA(SD_PCA.Numeric,
 ##################################
 # Formulating the Scree Plot
 ##################################
-DR_PCA_ScreePlot <- fviz_eig(DR_PCA, addlabels = TRUE, ylim = c(0, 100)) +
+(DR_PCA_ScreePlot <- fviz_eig(DR_PCA, addlabels = TRUE, ylim = c(0, 100)) +
   labs(title = "PCA : Scree Plot",
        subtitle = "Top 2 Principal Components",
        y = "Percentage of Explained Variances",
        x = "Principal Components") +
-  theme_classic()
+  theme_classic())
 
 ##################################
 # Extracting the PCA active variables
@@ -456,7 +456,7 @@ DR_PCA_KMEANS_CLUSTER <- as.factor(DR_PCA_KMEANS$cluster)
 # between the descriptor variables
 # and top principal components
 ##################################
-DR_PCA_CorrelationCircle <- fviz_pca_var(DR_PCA, 
+(DR_PCA_CorrelationCircle <- fviz_pca_var(DR_PCA, 
                                          col.var = DR_PCA_KMEANS_CLUSTER, 
                                          palette = c("#0073C2FF", "#EFC000FF", "#868686FF"),
                                          legend.title = "Cluster") +
@@ -465,28 +465,30 @@ DR_PCA_CorrelationCircle <- fviz_pca_var(DR_PCA,
        y = "Principal Component 2",
        x = "Principal Component 1") +
   theme_classic() +
-  theme(legend.position="top")
+  theme(legend.position="top"))
 
 ##################################
 # Extracting the contribution 
 # of the descriptor variables
 # for the Top 2 principal components
 ##################################
-DR_PCA_PC1Contributors <- fviz_contrib(DR_PCA, 
+(DR_PCA_PC1Contributors <- fviz_contrib(DR_PCA, 
                                  choice = "var", 
                                  axes = 1) +
   labs(title = "PCA : Variable Contribution",
        subtitle = "Principal Component 1 Contributors",
        x = "Descriptors") +
-  theme_classic()
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)))
 
-DR_PCA_PC2Contributors <- fviz_contrib(DR_PCA, 
+(DR_PCA_PC2Contributors <- fviz_contrib(DR_PCA, 
                                  choice = "var", 
                                  axes = 2) +
   labs(title = "PCA : Variable Contribution",
        subtitle = "Principal Component 2 Contributors",
        x = "Descriptors") +
-  theme_classic()
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)))
 
 ##################################
 # Gathering all PCA plots
@@ -495,9 +497,51 @@ grid.arrange(DR_PCA_ScreePlot,
              DR_PCA_CorrelationCircle, 
              DR_PCA_PC1Contributors, 
              DR_PCA_PC2Contributors, 
-             ncol = 3)
+             ncol = 2)
 
+(fviz_pca_ind(DR_PCA,
+             geom.ind = "text",
+             col.ind = SD_PCA$Picture,
+             repel = TRUE, 
+             legend.title = "Picture") +
+  labs(title = "PCA : Correlation Circle",
+       subtitle = "Principal Components Versus Individuals",
+       y = "Principal Component 2",
+       x = "Principal Component 1") +
+  theme_classic() +
+  theme(legend.position="top"))
 
+(fviz_pca_ind(DR_PCA,
+             geom.ind = "point",
+             col.ind = SD_PCA$Picture,
+             addEllipses = TRUE, 
+             legend.title = "Picture") +
+  labs(title = "PCA : Correlation Circle",
+       subtitle = "Principal Components Versus Individuals",
+       y = "Principal Component 2",
+       x = "Principal Component 1") +
+  theme_classic() +
+  theme(legend.position="top"))
+
+(fviz_contrib(DR_PCA, 
+              choice = "ind", 
+              axes = 1, 
+              top = 10) +
+  labs(title = "PCA : Individual Contribution",
+       subtitle = "Principal Component 1 Contributors",
+       x = "Descriptors") +
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)))
+
+(fviz_contrib(DR_PCA, 
+              choice = "ind", 
+              axes = 2, 
+              top = 10) +
+  labs(title = "PCA : Individual Contribution",
+       subtitle = "Principal Component 2 Contributors",
+       x = "Descriptors") +
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)))
 
 ```
 
