--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -416,7 +416,7 @@ summary(Oscars.PCA)
 |      **[B.1]** <span style="color: #FF0000">PC1</span> = 2.22
 |      **[B.1]** <span style="color: #FF0000">PC2</span> = 1.67
 |
-| **[C]** <span style="color: #FF0000">PC1</span> was characterized by the following descriptor variables, ranked based on contribution and statistical significance:
+| **[C]** <span style="color: #FF0000">PC1</span> can be described as having a collectively high or low critic / audience scores, oscar nominations and oscar winnability rate, as characterized by the following descriptor variables, ranked based on contribution and statistical significance:
 |      **[C.1]** High <span style="color: #FF0000">Tomatometer_Critic</span> = 23.09%
 |      **[C.2]** High <span style="color: #FF0000">IMDB_Audience</span> = 22.92%
 |      **[C.3]** High <span style="color: #FF0000">Tomatometer_Audience</span> = 19.56%
@@ -424,12 +424,23 @@ summary(Oscars.PCA)
 |      **[C.5]** High <span style="color: #FF0000">Nomination_SuccessRate</span> = 13.73%
 |      **[C.6]** High <span style="color: #FF0000">Nominations_Total</span> = 5.82%
 | 
-| **[D]** <span style="color: #FF0000">PC2</span> was characterized by the following descriptor variables, ranked based on importance and statistical significance:
+| **[D]** <span style="color: #FF0000">PC2</span> can be described as having high critic scores but low audience scores and oscar wins, or having low critic scores but high audience scores and oscar wins, as characterized by the following descriptor variables, ranked based on importance and statistical significance:
 |      **[D.1]** High <span style="color: #FF0000">IMDB_Critic</span> = 36.44%
 |      **[D.2]** High <span style="color: #FF0000">Tomatometer_Critic</span> = 22.50%
 |      **[D.3]** Low <span style="color: #FF0000">IMDB_Audience</span> = 16.37%
 |      **[D.4]** Low <span style="color: #FF0000">Tomatometer_Audience</span> = 15.68%
 |      **[D.5]** Low <span style="color: #FF0000">Nomination_SuccessRate</span> = 8.54%
+|
+| **[E]** With both <span style="color: #FF0000">PC1</span> and <span style="color: #FF0000">PC2</span> considered,the following relationships were observed among descriptor variables:
+|      **[E.1]** Critic and audience scores are the most represented descriptor variables for both principal components.
+|             **[E.1.1]** <span style="color: #FF0000">IMDB_Critic</span>)
+|             **[E.1.2]** <span style="color: #FF0000">Tomatometer_Critic</span>)
+|             **[E.1.3]** <span style="color: #FF0000">IMDB_Audience</span>)
+|             **[E.1.4]** <span style="color: #FF0000">Tomatometer_Audience</span>)
+|      **[E.2]** 3 clusters were formulated based on the correlations between descriptor variables:
+|             **[E.2.1]** Cluster 1 : <span style="color: #FF0000">IMDB_Critic</span>) and <span style="color: #FF0000">Tomatometer_Critic</span>) indicating that critic scores are consistent for both sources (Tomatometer and IMDB)
+|             **[E.2.2]** Cluster 2 : <span style="color: #FF0000">IMDB_Audience</span>), <span style="color: #FF0000">Tomatometer_Audience</span>) and <span style="color: #FF0000">Nomination_SuccessRate</span>) indicating that audience scores are consistent for both sources (Tomatometer and IMDB), and are correlated with oscar wins.
+|             **[E.2.3]** Cluster 3 : <span style="color: #FF0000">Nominations_Total</span>) indicating that the number of oscar nominations are not correlated with critic and audience scores, as well as oscar wins.
 | 
 ```{r section_1.5.1, warning=FALSE, message=FALSE}
 ##################################
@@ -515,6 +526,22 @@ DR_PCA_VAR$cos2
 DR_PCA_VAR$contrib
 
 ##################################
+# Extracting the quality of representation 
+# for the descriptor variables
+# on the factor map 
+##################################
+(DR_PCA_VariableSquaredCorrelationCircle <- fviz_pca_var(DR_PCA, 
+                                         col.var = "cos2", 
+                                         gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
+                                         legend.title = "Squared Coordinates") +
+  labs(title = "PCA : Squared Correlation Circle",
+       subtitle = "Descriptor Variable Representation Quality",
+       y = "Principal Component 2",
+       x = "Principal Component 1") +
+  theme_classic() +
+  theme(legend.position="top"))
+
+##################################
 # Formulating clusters of the
 # descriptor variables
 ##################################
@@ -533,22 +560,6 @@ DR_PCA_KMEANS_CLUSTER <- as.factor(DR_PCA_KMEANS$cluster)
                                          legend.title = "Cluster") +
   labs(title = "PCA : Correlation Circle",
        subtitle = "Principal Components Versus Descriptor Variable Clusters",
-       y = "Principal Component 2",
-       x = "Principal Component 1") +
-  theme_classic() +
-  theme(legend.position="top"))
-
-##################################
-# Extracting the quality of representation 
-# for the descriptor variables
-# on the factor map 
-##################################
-(DR_PCA_VariableSquaredCorrelationCircle <- fviz_pca_var(DR_PCA, 
-                                         col.var = "cos2", 
-                                         gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
-                                         legend.title = "Squared Coordinates") +
-  labs(title = "PCA : Squared Correlation Circle",
-       subtitle = "Descriptor Variable Representation Quality",
        y = "Principal Component 2",
        x = "Principal Component 1") +
   theme_classic() +
